--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "react-router build",
     "dev": "NODE_OPTIONS='--import ./instrument.server.mjs' react-router dev",
-"start": "NODE_OPTIONS='--import ./instrument.server.mjs' react-router-serve ./build/server/index.js",
+    "start": "NODE_OPTIONS='--import ./instrument.server.mjs' react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "@syncfusion/ej2-react-splitbuttons": "^30.1.41",
     "appwrite": "^18.2.0",
     "clsx": "^2.1.1",
+    "cross-env": "^10.0.0",
     "dayjs": "^1.11.13",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
